<resources>
    <string name="app_name">StudyApplication</string>

    <string name="to_v3_button_text">To V3 Button</string>
    <string name="to_v41_button_text">To V41 Button</string>
    <string name="to_v42_button_text">To V42 Button</string>
    <string name="to_v43_button_text">To V43 Button</string>
    <string name="to_v5_button_text">To V5 Button</string>
    <string name="to_v6_button_text">To V6 Button</string>
    <string name="to_v10_button_text">To V10 Button</string>
    <string name="to_v13_button_text">To V13 Button</string>
    <string name="to_v14_button_text">To V14 Button</string>
    <string name="to_v15_button_text">To V15 Button</string>
    <string name="to_v18_button_text">To V18 Button</string>
    <string name="to_v23_button_text">To V23 Button</string>

    <string name="first_activity_textview_text">First Activity TextView</string>
    <string name="to_second_activity_button_text">To Second Activity Button</string>
    <string name="to_dialog_activity_button_text">To Dialog Activity Button</string>
    <string name="second_activity_textview_text">Second Activity TextView</string>
    <string name="finish_second_activity_button_text">Finish Second Activity Button</string>

    <string name="call_home_fragment_method_button_text">Call Home Fragment Method Button</string>
    <string name="home_fragment_textview_text">Home Fragment TextView</string>
    <string name="call_activity_method_button_text">Call Activity Method Button</string>
    <string name="my_fragment_textview_text">My Fragment TextView</string>

    <string name="http_url_connection_get_btn_text">HttpUrlConnection Get Button</string>
    <string name="http_url_connection_post_btn_text">HttpUrlConnection Post Button</string>
    <string name="volley_get_btn_text">Volley Get Button</string>
    <string name="volley_get_json_btn_text">Volley Get Json Button</string>
    <string name="okhttp_get_sync_btn_txt">Okhttp Get Sync Button</string>
    <string name="okhttp_get_async_btn_text">Okhttp Get Async Button</string>
    <string name="okhttp_post_async_btn_text">Okhttp Post Async Button</string>
    <string name="okhttp_get_async_interceptors_btn_text">Okhttp Get Async Interceptors Button</string>
    <string name="retrofit_get_btn_text">Retrofit Get Button</string>
    <string name="retrofit_post_btn_text">Retrofit Post Button</string>
    <string name="retrofit_post_mock_btn_text">Retrofit Post Mock Button</string>
    <string name="retrofit_post_complex_btn_text">Retrofit Post Complex Button</string>
    <string name="retrofit_post_complex_rxjava_btn_text">Retrofit Post Complex RxJava Button</string>
    <string name="retrofit_post_complex_rxjava_example_btn_text">Retrofit Post Complex RxJava Example Button</string>

</resources>