<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/to_v3_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_v3_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview" />

    <Button
        android:id="@+id/to_v41_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/to_v41_button_text"
        app:layout_constraintEnd_toStartOf="@+id/to_v42_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_v3_button" />

    <Button
        android:id="@+id/to_v42_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/to_v42_button_text"
        app:layout_constraintEnd_toStartOf="@+id/to_v43_button"
        app:layout_constraintStart_toEndOf="@+id/to_v41_button"
        app:layout_constraintTop_toBottomOf="@+id/to_v3_button" />

    <Button
        android:id="@+id/to_v43_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/to_v43_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/to_v42_button"
        app:layout_constraintTop_toBottomOf="@+id/to_v3_button" />

    <Button
        android:id="@+id/to_v5_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_v5_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_v43_button" />

    <Button
        android:id="@+id/to_v6_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_v6_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_v5_button" />

    <Button
        android:id="@+id/to_v10_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_v10_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_v6_button" />

    <Button
        android:id="@+id/to_v13_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_v13_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_v10_button" />

    <Button
        android:id="@+id/to_v14_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_v14_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_v13_button" />

    <Button
        android:id="@+id/to_v15_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_v15_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_v14_button" />

    <Button
        android:id="@+id/to_v18_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_v18_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_v15_button" />

</androidx.constraintlayout.widget.ConstraintLayout>